created array of lots and buttons to correlate.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>{{ size }}</p>
             <p>{{ money }}</p>
             {{#lots}}
-            <button>{{ button }}</button>
+            <button class="lot-{{id}}">{{ button }}</button>
             {{/lots}}
         </script>
     </head>
